# wasmedge-vdb

./: Cargo.toml
examples/: embeddings.rs
src/: client.rs  collection.rs  common.rs  error.rs  lib.rs  my_client.rs  my_collection.rs  my_error.rs  options.rs  schema.rs  utils.rs
src/proto/: mod.rs
