[package]
edition = "2021"
name = "wasmedge-vdb"
version = "0.1.0"

[dependencies]
# milvus-sdk-rust = {git = "https://github.com/apepkuss/milvus-sdk-rust.git", branch = "dev"}
milvus-sdk-rust = {path = "../milvus-sdk-rust"}
thiserror = "1.0.30"

base64 = "0.21"
num-derive = "0.3"
num-traits = "0.2"
prost = "0.11.0"
prost-types = "0.11"
serde_json = "1.0"
tonic = {version = "0.8.2", features = ["tls", "tls-roots"]}

[dev-dependencies]
tokio = {version = "1", features = ["rt", "macros"]}
